--- a/form.html
+++ b/form.html
@@ -50,11 +50,13 @@
 <input type="checkbox" id="term and condition" >
 
 <input type="checkbox" id="term and condition" ><br>
-        <button type="submit">Submit</button> <br>
+        
         <input type="file">
         <input type="week">
         <input type="datetime-local">
-        <input type="checkbox" id="term and condition" >
+        <input type="checkbox" id="term and condition" ><br>
+        
+        <button type="submit">Submit</button> <br>
 
     </form>
 </body>
